[package]
name = "report_card"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
colored = "2.0.4"
text_io = "0.1.12"
derive_more = { version = "1.0.0", features = ["full"] }
serde_with = "3.9.0"
tokio = { version = "1.39.3", features = ["full"] }
